<resources>
    <string name="app_name">Quize3</string>
    <string name="FirstName" />
    <string name="LastName" />
    <string name="NationalCode" />
    <string name="firstname_label">FirstName/label</string>
    <string name="firstname" />
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="national_code">National Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>