<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_rcyclerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstname_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FirstName" />

            <TextView
                android:id="@+id/lastname_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LastName" />

            <TextView
                android:id="@+id/nationalcode_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NationalCode" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>